# dclm-bds-project

./: .env.exact.example  .gitignore  README.md  diff.txt  pyproject.toml  requirements.txt
dedup/: base.py  bloomfilter.py  config.py  constants.py  exact.py  minhash.py  minhash_bloom_hybrid.py  registry.py  runner.py
dedup/metrics/: __init__.py  logger.py
dedup/utils/: __init__.py  init_wandb.py  push_to_hub.py  save_as_excel.py  save_file_to_wandb.py
duplicates_logs/: duplicates_thresh_0.7_20250427_202259.csv  duplicates_thresh_0.7_20250427_203701.xlsx  duplicates_thresh_0.7_20250427_204204.xlsx  duplicates_thresh_0.7_20250427_210447.xlsx  duplicates_thresh_0.7_20250427_210944.xlsx  duplicates_thresh_0.7_20250427_211559.xlsx  duplicates_thresh_0.7_20250427_212121.xlsx  duplicates_thresh_0.7_20250427_212725.xlsx  duplicates_thresh_0.7_20250427_213528.xlsx  duplicates_thresh_0.7_20250427_213644.xlsx  duplicates_thresh_0.8_20250427_205151.xlsx  duplicates_thresh_0.8_20250427_205457.xlsx  ~$duplicates_thresh_0.7_20250427_212121.xlsx
scripts/: run_pipeline.py
