[project]
name = "dedup"
version = "0.1.0"
description = ""
authors = [{ name = "gbatra3", email = "gbatra3@wisc.edu" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic (>=2.11.2,<3.0.0)",
  "datasets (>=3.5.0,<4.0.0)",
  "wandb (>=0.19.9,<0.20.0)",
  "pydantic-settings (>=2.8.1,<3.0.0)",
  "huggingface-hub (>=0.30.1,<0.31.0)",
  "seaborn (>=0.13.2,<0.14.0)",
  "matplotlib (>=3.10.1,<4.0.0)",
  "nltk (>=3.9.1,<4.0.0)",
  "datasketch (>=1.6.5,<2.0.0)",
  "bitarray (>=3.3.1,<4.0.0)",
  "openpyxl (>=3.1.5,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
